# repository/interfaces.go
@@ -10,4 +10,5 @@ type RepositoryInterface interface {
 	CreateUser(context.Context, *User) (int64, error)
 	FindUserByPhoneAndCountryCode(context.Context, string, string) (*User, error)
 	FindUserByID(context.Context, int64) (*User, error)
+	UpdateUser(context.Context, *User) error
 }
